# car-game

./: .gitignore  Cargo.toml  makefile
.cargo/: config.toml
assets/: assets.blend  car.mtl  decor.mtl  ground.mtl  materials.baked  roads.mtl  test_cube.mtl
assets/meshes/: decor.mtl  floor.mtl  ground.mtl  ground_hitbox.mtl  ocean.mtl  roads.mtl  water.mtl  wheel.mtl
assets/models/: earth.mtl  test_sphere.mtl
car-game/: Cargo.toml
car-game/src/: camera.rs  debug_controller.rs  framerate.rs  lib.rs  web_interface.rs
crates/assets/: Cargo.toml  build.rs
crates/assets/src/: fonts.rs  lib.rs  macros.rs  objects.rs
crates/assets/src/objects/: car.rs  mod.rs  world.rs
crates/render/: Cargo.toml  build.rs
crates/render/src/: camera.rs  debug.rs  gui.rs  lib.rs  macros.rs  material.rs  mesh.rs  model.rs  scene.rs  shader.wgsl  uniforms.rs  vert.rs
crates/render/src/scene/: camera.rs  debug.rs  mesh.rs  mod.rs  model.rs  shadows.rs  skidlines.rs
crates/render/src/shaders/: debug.wgsl  debuglines.wgsl  rects.wgsl  scene.wgsl  shadow_pass.wgsl  skidline.wgsl
crates/sim/: Cargo.toml
crates/sim/src/: car.rs  controller.rs  lib.rs  physics.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
src/: lib.rs  shader.wgsl
web/: index.html  run_game.js  style.css
web/js/: run_game.js  wasm_interface.js
web/styles/: fonts.css  index.css
