[workspace]
members = ["car-game", "crates/*"]
default-members = ["car-game"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Jaxson Pahukula <jaxpahu@gmail.com>"]
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
cgmath = "0.18"
log = "0.4"
obj = { path = "./crates/obj" }
render = { path = "./crates/render" }
wasm-bindgen = "0.2.100"
wgpu = { version = "26.0.1", features = ["webgl", "webgpu"] }
winit = { version = "0.30", features = ["android-native-activity"] }
