[package]
name = "car-game"
description = "A game about a car"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1", features = ["color"] }
instant = "0.1" # cus std::time doesn't work on WASM
log = { workspace = true }
nalgebra = { workspace = true }
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]} # instant crate breaks wasm-bindgen without this line
render = { path = "../crates/render" }
sim = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element"] }
wgpu = { workspace = true }
winit = { workspace = true }
