[package]
name = "render"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
assets = { workspace = true }
bytemuck = { version = "1.16", features = [ "derive" ] }
log = { workspace = true }
nalgebra = { workspace = true }
sim = { workspace = true }
wasm-bindgen = { workspace = true }
wgpu = { workspace = true }
wgpu_text = "26.0.0"
winit = { workspace = true } 